# ChangeLog for app-portage/esearch
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.47 2006/06/11 20:29:23 antarus Exp $

*esearch-0.7.1-r4 (11 Jun 2006)

  11 Jun 2006; Alec Warner <antarus@gentoo.org>
  +files/132548-multiple-overlay.patch, +esearch-0.7.1-r4.ebuild:
  revert bad patch, add overlays patch for bug # 132548

*esearch-0.7.1-r3 (26 May 2006)

  26 May 2006; Alec Warner <antarus@gentoo.org>
  +files/124601-remove-deprecated-syntax.patch,
  +files/105234-fix-2.1-cache.patch,
  +files/120817-unset-emergedefaultopts.patch, -esearch-0.7.ebuild,
  +esearch-0.7.1-r3.ebuild:
  Multiple bugfixes and patches for esearch: bugs
  105234,120817,124601,97462,97969

*esearch-0.7.1-r2 (24 Apr 2006)

  24 Apr 2006; Alec Warner <antarus@gentoo.org>
  +files/97969-ignore-missing-ebuilds.patch, -esearch-0.7.1-r1.ebuild,
  +esearch-0.7.1-r2.ebuild:
  Fixed commit straight to stable, add a patch to fix missing ebuilds.
  Fix Changelog.

*esearch-0.7.1-r1 (23 Apr 2006)

  23 Apr 2006; Alec Warner <antarus@gentoo.org> +files/97462-esearch-metadata.patch,
  +esearch-0.7.1-r1.ebuild:
  Fix bug 97462, thanks to Jer@gentoo.org for the most excellent patch

  03 Mar 2006; Danny van Dyk <kugelfang@gentoo.org> esearch-0.7.1.ebuild:
  Stable on s390 wrt bug #90793.

  03 Mar 2006; Jose Luis Rivero <yoswink@gentoo.org> esearch-0.7.1.ebuild:
  Stable on alpha wrt bug #90793

  02 Mar 2006; Jeroen Roovers <jer@gentoo.org> esearch-0.7.1.ebuild:
  Stable on hppa (bug #90793).

  02 Mar 2006; Chris White <chriswhite@gentoo.org> esearch-0.7.1.ebuild:
  ppc stable wrt bug #90793.

  27 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> esearch-0.7.1.ebuild:
  Stable on sparc wrt #90793

  27 Feb 2006; Markus Rothe <corsair@gentoo.org> esearch-0.7.1.ebuild:
  Stable on ppc64

  26 Feb 2006; Luis Medinas <metalgod@gentoo.org> esearch-0.7.1.ebuild:
  Stable on amd64. Bug #90793.
