@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/esearch
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.47 2006/06/11 20:29:23 antarus Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.48 2007/02/11 15:13:09 truedfx Exp $
+
+  11 Feb 2007; Harald van Dĳk <truedfx@gentoo.org> esearch-0.7.1.ebuild,
+  esearch-0.7.1-r2.ebuild, esearch-0.7.1-r3.ebuild, esearch-0.7.1-r4.ebuild:
+  Add linguas_it to IUSE (#136953)
 
 *esearch-0.7.1-r4 (11 Jun 2006)
 
